# TypeToGraph

./: README.md  pyproject.toml
TypeToGraph/: __init__.py  app.py  constants.py
TypeToGraph/displaying/: adapter.py  display.py  layouts.py  widgets.py
TypeToGraph/graph/: tree.py
TypeToGraph/models/: display.py
